@startuml
class BombProp{
    - subscribers : List<AbstractFlyingObject>
    + addSubscriber(AbstractFlyingObject flyingObj) : void
    + notifySubscribers() : void
    + work() : int
}
abstract class AbstractFlyingObject{
    + vanish() : void
}
abstract class AbstractEnemy{}
class EnemyBullet{}
AbstractFlyingObject <|-- AbstractEnemy
AbstractFlyingObject <|-- EnemyBullet
BombProp o--> AbstractFlyingObject
abstract class BaseGame{}
BaseGame ..> BombProp
@enduml